--- a/app/src/main/res/layout/info_bottom_sheet.xml
+++ b/app/src/main/res/layout/info_bottom_sheet.xml
@@ -17,32 +17,33 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/bottom_sheet_layout"
     android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
     android:background="@color/bottom_sheet_background"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:padding="@dimen/bottom_sheet_padding"
-    android:layout_height="wrap_content"
     app:behavior_hideable="false"
     app:behavior_peekHeight="@dimen/bottom_sheet_peek_height"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
     <androidx.appcompat.widget.LinearLayoutCompat
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <!-- Chevron indicating that the bottom sheet is expandable -->
         <RelativeLayout
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
-                android:src="@drawable/icn_chevron_up"
-                android:contentDescription="@string/alt_bottom_sheet_chevron" />
+                android:contentDescription="@string/alt_bottom_sheet_chevron"
+                android:src="@drawable/icn_chevron_up" />
         </RelativeLayout>
 
         <!-- Inference time row -->
@@ -51,21 +52,23 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/bottom_sheet_default_row_margin"
             android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/inference_time_label"
-                android:text="@string/label_interence_time"
-                android:textColor="@color/bottom_sheet_text_color"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
+                android:text="@string/label_interence_time"
+                android:textColor="@color/bottom_sheet_text_color"
                 android:textSize="@dimen/bottom_sheet_text_size" />
+
             <TextView
                 android:id="@+id/inference_time_val"
-                android:text="0ms"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="end"
                 android:layout_centerVertical="true"
+                android:gravity="end"
+                android:text="0ms"
                 android:textColor="@color/bottom_sheet_text_color"
                 android:textSize="@dimen/bottom_sheet_text_size" />
         </androidx.appcompat.widget.LinearLayoutCompat>
@@ -81,17 +84,17 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/label_confidence_threshold"
                 android:layout_centerVertical="true"
-                android:textSize="@dimen/bottom_sheet_text_size"
-                android:textColor="@color/bottom_sheet_text_color" />
+                android:text="@string/label_confidence_threshold"
+                android:textColor="@color/bottom_sheet_text_color"
+                android:textSize="@dimen/bottom_sheet_text_size" />
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:gravity="center_vertical"
-                android:orientation="horizontal"
-                >
+                android:orientation="horizontal">
 
                 <androidx.appcompat.widget.AppCompatImageButton
                     android:id="@+id/threshold_minus"
@@ -117,7 +120,7 @@
                     android:layout_width="@dimen/bottom_sheet_control_btn_size"
                     android:layout_height="@dimen/bottom_sheet_control_btn_size"
                     android:contentDescription="@string/alt_bottom_sheet_threshold_button_plus"
-                    android:src="@drawable/ic_plus"  />
+                    android:src="@drawable/ic_plus" />
             </LinearLayout>
         </RelativeLayout>
 
@@ -132,10 +135,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/label_max_results"
-                android:textSize="@dimen/bottom_sheet_text_size"
                 android:layout_centerVertical="true"
-                android:textColor="@color/bottom_sheet_text_color" />
+                android:text="@string/label_max_results"
+                android:textColor="@color/bottom_sheet_text_color"
+                android:textSize="@dimen/bottom_sheet_text_size" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -143,23 +146,26 @@
                 android:layout_alignParentRight="true"
                 android:gravity="center"
                 android:orientation="horizontal">
+
                 <androidx.appcompat.widget.AppCompatImageButton
                     android:id="@+id/max_results_minus"
                     android:layout_width="@dimen/bottom_sheet_control_btn_size"
                     android:layout_height="@dimen/bottom_sheet_control_btn_size"
                     android:contentDescription="@string/alt_bottom_sheet_max_results_button_minus"
                     android:src="@drawable/ic_minus" />
+
                 <TextView
                     android:id="@+id/max_results_value"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:minEms="@integer/bottom_sheet_control_text_min_ems"
-                    android:gravity="center"
                     android:layout_marginLeft="@dimen/bottom_sheet_control_text_side_margin"
                     android:layout_marginRight="@dimen/bottom_sheet_control_text_side_margin"
+                    android:gravity="center"
+                    android:minEms="@integer/bottom_sheet_control_text_min_ems"
                     android:text="3"
                     android:textColor="@color/bottom_sheet_text_color"
                     android:textSize="@dimen/bottom_sheet_text_size" />
+
                 <androidx.appcompat.widget.AppCompatImageButton
                     android:id="@+id/max_results_plus"
                     android:layout_width="@dimen/bottom_sheet_control_btn_size"
@@ -180,17 +186,17 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/label_threads"
                 android:layout_centerVertical="true"
-                android:textSize="@dimen/bottom_sheet_text_size"
-                android:textColor="@color/bottom_sheet_text_color" />
+                android:text="@string/label_threads"
+                android:textColor="@color/bottom_sheet_text_color"
+                android:textSize="@dimen/bottom_sheet_text_size" />
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:gravity="center_vertical"
-                android:orientation="horizontal"
-                >
+                android:orientation="horizontal">
 
                 <androidx.appcompat.widget.AppCompatImageButton
                     android:id="@+id/threads_minus"
@@ -216,7 +222,7 @@
                     android:layout_width="@dimen/bottom_sheet_control_btn_size"
                     android:layout_height="@dimen/bottom_sheet_control_btn_size"
                     android:contentDescription="@string/alt_bottom_sheet_thread_button_plus"
-                    android:src="@drawable/ic_plus"  />
+                    android:src="@drawable/ic_plus" />
             </LinearLayout>
         </RelativeLayout>
 
@@ -227,21 +233,21 @@
             android:layout_marginTop="@dimen/bottom_sheet_default_row_margin">
 
             <TextView
-                android:text="@string/label_delegate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/bottom_sheet_text_size"
-                android:textColor="@color/bottom_sheet_text_color" />
+                android:text="@string/label_delegate"
+                android:textColor="@color/bottom_sheet_text_color"
+                android:textSize="@dimen/bottom_sheet_text_size" />
 
             <androidx.appcompat.widget.AppCompatSpinner
                 android:id="@+id/spinner_delegate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:entries="@array/delegate_spinner_titles"
                 android:minWidth="@dimen/bottom_sheet_spinner_delegate_min_width"
                 android:spinnerMode="dropdown"
-                android:theme="@style/BottomSheetSpinnerItemStyle"
-                android:layout_alignParentRight="true"
-                android:entries="@array/delegate_spinner_titles"/>
+                android:theme="@style/BottomSheetSpinnerItemStyle" />
 
         </RelativeLayout>
 
@@ -252,21 +258,21 @@
             android:layout_marginTop="@dimen/bottom_sheet_default_row_margin">
 
             <TextView
-                android:text="@string/label_models"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/bottom_sheet_text_size"
-                android:textColor="@color/bottom_sheet_text_color" />
+                android:text="@string/label_models"
+                android:textColor="@color/bottom_sheet_text_color"
+                android:textSize="@dimen/bottom_sheet_text_size" />
 
             <androidx.appcompat.widget.AppCompatSpinner
                 android:id="@+id/spinner_model"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:entries="@array/models_spinner_titles"
                 android:minWidth="@dimen/bottom_sheet_spinner_model_min_width"
                 android:spinnerMode="dropdown"
-                android:theme="@style/BottomSheetSpinnerItemStyle"
-                android:layout_alignParentRight="true"
-                android:entries="@array/models_spinner_titles"/>
+                android:theme="@style/BottomSheetSpinnerItemStyle" />
 
         </RelativeLayout>
     </androidx.appcompat.widget.LinearLayoutCompat>
